--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!-- character set -->
     <meta charset="utf-8">
     <!-- title -->
-    <title></title>
+    <title>Dictionary Definition Search</title>
     <!-- normalize css -->
     <link rel="stylesheet" href="css/normalize.css">
     <!-- bootstrap 4 css -->
